2018-08-17 Fixed Double_State_Button native navigation.
2018-08-13 Fixed Choice disable command on mobiles
2018-08-10 Added audio descriptions to the video addon
2018-08-10 Fixed displaying of < > buttons in assessments navigation bar
2018-08-07 Fixed layout change issue after quiting fullscreen mode
2018-08-06 Fixed issues with tests for page version update
2018-08-03 Fixed playing Video without controls bar
2018-08-03 Added Copy Page Settings to Page properties
2018-08-03 Changed is visible property so that it's common for all layouts
2018-07-31 Fixed PieChart's display on Desktop devices
2018-07-26 Removed reading " connected" when in Show Answer Mode in TTS
2018-07-25 Added test mode in quiz
2018-07-23 Added module sorting in editor
2018-07-20 Fixed issues with invalid model in Crossword addon
2018-07-18 Replaced Video Tutorials button with Interactive Tutorials
2018-07-18 Fixed Scrolling on a Page in TTS
2018-07-17 Added Phrase Selection Mode to Text Coloring
2018-07-17 Fixed coursor position in GridScene
2018-07-13 Fixed next() and previous() methods in MultiAudio addon
2018-07-13 Fixed fullscreen on iPad
2018-07-13 Fixed restartGame command in Shooting Range
2018-07-12 Removed Byte Order Mark from polish dictionary
2018-07-10 Added Games category
2018-07-10 Added scrolling to the active module in keyboard navigation
2018-07-10 Added TTS support for Image Gap
2018-07-09 Added TTS support for gaps in Table
2018-07-06 Added TTS support for Double State Button
2018-07-06 Added TTS support for Memo Game
2018-07-04 Fixed setting of working mode in text coloring addon
2018-07-04 Fixed calculation of popup elements position
2018-06-29 Fixed several issues between TTS and NVDA on Firefox
2018-06-27 Fixed autofill option for TTS
2018-06-26 Fixed identification of expression variables in math addon
2018-06-25 Added feature to color individual letters in text coloring addon
2018-06-25 Fixed visibility of the element dragged from the gap